# calorie-expenditure-predictor

./: .gitignore  README.md  main.py  pyproject.toml
src/: eda.ipynb  hill_climbing.ipynb  minimize_ensemble.ipynb  simple_ridge.ipynb  simple_ridge_with_retrained_base.ipynb
src/models/: knn_model_1.ipynb  lgbm_model_1.ipynb  lr_model_1.ipynb  nn_model_1.ipynb  xgboost_model_1.ipynb
